# calf

./: .gitignore  LICENSE  Makefile  Makefile.am  README  calf.8.in  calf.c  calf.css  calf.h  configure.ac  html.c  list.c  mksnips.sed  snips  snips.html
share/: Makefile.am  calf.css  nginx.conf  nginx.conf.in
src/: Makefile.am  calf.c  calf.h  html.c  snips.html
systemd/: Makefile.am  calf.service  calf.service.in  calf.socket
